--- a/website/syllabus.html
+++ b/website/syllabus.html
@@ -44,7 +44,7 @@
         <p>We will be using Piazza for class communication/discussions, so
           you should get an enrollment email from them. Please do sign up and
           check it out.  The URL for the Piazza site is
-          <a href="#">here</a></p>
+          <a href="https://piazza.com/eng.ucsd/fall2021/cse276c">here</a></p>
 
         <h2>Emailing about the class:</h2>
 
